# app-store-dash

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  README.md  app.py
backend/: app.py  make_sitemap.py  pyproject.toml
backend/api_app/: models.py
backend/api_app/controllers/: apps.py  categories.py  companies.py  networks.py  rankings.py  sdks.py  trackers.py
backend/config/: __init__.py
backend/dbcon/: connections.py  queries.py
backend/dbcon/sql/: query_adtech_categories.sql  query_adtech_category_type.sql  query_adtech_type.sql  query_all_tables_in_schema.sql  query_app_history.sql  query_app_package_details.sql  query_appstore_categories.sql  query_category_top_apps_by_installs.sql  query_category_totals.sql  query_companies_category_type_top.sql  query_companies_overview.sql  query_companies_parent_overview.sql  query_companies_parent_overview_category.sql  query_companies_parent_top.sql  query_company_apps.sql  query_company_apps_new.sql  query_company_category.sql  query_company_category_top_apps.sql  query_company_overview.sql  query_company_parent_category.sql  query_company_parent_overview.sql  query_company_sdks.sql  query_company_top_apps.sql  query_company_tree.sql  query_history_top_ranks.sql  query_manifest_names.sql  query_most_recent_top_ranks.sql  query_network_apps.sql  query_parent_company_apps.sql  query_ranks_for_app.sql  query_sdk_pattern.sql  query_sdk_pattern_companies.sql  query_sdks.sql  query_search_apps.sql  query_search_companies.sql  query_search_devs.sql  query_single_app.sql  query_single_app_adstxt.sql  (+14 more)
config/: __init__.py
(+229 files in other folders)
